# SearchNewsRAG

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.monitoring.prod.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  logging_config.py  monitoring.sh  pyproject.toml  requirements.txt
.github/: COMMIT_CONVENTION.md
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 001_initial_users.py
backend/src/: admin.py  config.py  database.py  dependencies.py  logging_config.py  main.py  migrations.py  pagination.py
backend/src/auth/: __init__.py  router.py  schemas.py
backend/src/auth/services/: __init__.py  admin_auth.py  admin_auth_service.py  auth_service.py  email_service.py  otp_service.py
backend/src/cache/: __init__.py  decorator.py  dependencies.py
backend/src/chats/: __init__.py  dependencies.py  router.py  schemas.py
backend/src/news/: __init__.py  dependencies.py  filters.py  router.py  schemas.py  service.py  utils.py
backend/src/news/services/: __init__.py  category.py  chroma.py  entity.py  facade.py  graph.py  news_list.py  postgres.py  protocols.py  source.py  update_news.py
backend/src/tasks/: celery_app.py  news_tasks.py
backend/src/users/: __init__.py  admin.py  dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  superuser.py
docker/nginx/: Dockerfile
docker/nginx/conf.d/: default.conf  rate_limits.conf  upstreams.conf
docker/nginx/includes/: proxy_backend.conf  proxy_frontend.conf
docs/: CELERY_SETUP.md  DATA_COLLECTION.md  DEPLOYMENT.md  MONITORING.md  QA_SERVICE.md  README_AZ.md  README_RU.md  VECTORIZATION_SERVICE.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ChatInput.tsx  ChatMessages.tsx  IndexStatusPanel.tsx  LatestNewsPanel.tsx  MessageBubble.tsx  NewsEventCard.tsx  QuickQueryTemplates.tsx  ThemeToggle.tsx  TimeFilterSelector.tsx  TrendingTopicsPanel.tsx  TypingIndicator.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useAnalytics.ts  useChat.ts  useLanguage.ts  useTheme.ts
frontend/src/i18n/: translations.ts
frontend/src/prototype/: PrototypeGraphsPage.tsx
frontend/src/services/: apiService.ts
frontend/src/types/: index.ts  universe.ts
frontend/src/universe/: CategoryTree.tsx  EdgeLayer.tsx  EntityList.tsx  NodeCard.tsx  SidePanel.tsx  UniversePage.tsx  api.ts  index.ts  types.ts
frontend/src/utils/: dateUtils.ts  textUtils.ts
monitoring/: loki.yml  prometheus.yml  promtail-prod.yml  promtail.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
rag_module/: .env.example  __init__.py  __main__.py  config.py  main.py  setup.py
rag_module/baseclasses/data_processing/: cleaners.py  pipeline.py
rag_module/cache/: __init__.py  protocols.py  query_cache.py  redis_cache.py
rag_module/data_processing/: __init__.py  analyzers.py  chunkers.py  cleaners.py  loaders.py  news_analyzer.py  pipeline.py  protocols.py
rag_module/data_processing/analyzers/: __init__.py  base.py  news_analyzer.py
rag_module/db/: __init__.py  database.py  models.py  repository.py
rag_module/db/migrations/: README.md  env.py
rag_module/db/migrations/versions/: 0db51def8e7c_initial_schema.py
rag_module/message_templates/: __init__.py
rag_module/prompts/: __init__.py  answer_generation_prompts.py  news_analyzer_prompts.py  query_analyzer_prompts.py
rag_module/promts/: __init__.py  news_analyzer_prompts.py
rag_module/query_processing/: __init__.py  llm_processor.py  pipeline.py  protocols.py  router.py
rag_module/retrieval/: __init__.py  llm_generator.py  pipeline.py  protocols.py
rag_module/retrieval/handlers/: __init__.py  attacking.py  prediction.py  simple_search.py  statistics.py  talk.py  unknown.py
rag_module/services/: __init__.py  qa_service.py  vectorization.py  vectorization_v2.py
rag_module/settings/: base.py
rag_module/text/: __init__.py  pre_processing.py
rag_module/vector_store/: __init__.py  batch_processor.py  chroma_store.py  converters.py  embedding.py  protocols.py  repository.py
settings/: __init__.py  base.py  local.py  prod.py
telegram_fetcher/: .env.example  __main__.py  base.py  config.py  services.py
telegram_fetcher/parsers/: __init__.py  __main__.py  base.py  qafqazinfo.py
tests/: conftest.py
tests/rag_module/: conftest.py
tests/rag_module/data_processing/: test_analyzers.py  test_chunkers.py  test_cleaners.py  test_loaders.py  test_pipeline.py
tests/rag_module/query_processing/: __init__.py  test_pipeline.py  test_protocols.py  test_router.py
tests/rag_module/services/: test_vectorization.py
tests/rag_module/text/: test_pre_processing.py
tests/telegram_fetcher/: conftest.py  test_base.py  test_services.py
tests/telegram_fetcher/parsers/: test_base.py  test_qafqazinfo.py
