[project]
name = "searchnewsapp"
version = "0.1.0"
description = "A scalable RAG system for collecting, indexing and searching Telegram news"
authors = [
    {name = "Rahimov Imran", email = "mr.rahimov.imran@gmail.com"}
]
readme = "README.md"

requires-python = ">=3.11,<4.0"

dependencies = [
    "python-dotenv==1.2.1",
    "numpy==2.3.4",
    "chromadb==1.3.4",
    "openai==2.7.1",
    "langchain==1.0.5",
    "langchain-core==1.0.4",
    "langchain-community==0.4.1",
    "langchain-chroma==1.0.0",
    "langchain-openai==1.0.2",
    "tiktoken==0.12.0",
    "telethon==1.42.0",
    "requests==2.32.5",
    "aiohttp==3.13.2",
    "fake-useragent==2.2.0",
    "beautifulsoup4==4.14.2",
]


[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.7",
    "coverage==7.6.1",

    "ruff==0.7.1",            
    "mypy==1.11.2",           

    "black==24.10.0",
]

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = ["E", "F", "I"]   
ignore = ["E501"]          

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "tests/*.py"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


