[project]
name = "searchnewsapp"
version = "0.1.0"
description = "RAG-powered semantic search for Azerbaijani news with async Telegram scraping and OpenAI embeddings"
authors = [
    {name = "Rahimov Imran", email = "mr.rahimov.imran@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
name = "searchnewsapp"
version = "0.1.0"
description = "RAG-powered semantic search for Azerbaijani news with async Telegram scraping and OpenAI embeddings"
authors = ["Rahimov Imran <mr.rahimov.imran@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "1.2.1"
numpy = "2.3.4"
chromadb = "1.3.4"
openai = "2.7.1"
langchain = "1.0.5"
langchain-core = "1.0.4"
langchain-community = "0.4.1"
langchain-chroma = "1.0.0"
langchain-openai = "1.0.2"
tiktoken = "0.12.0"
telethon = "1.42.0"
requests = "2.32.5"
aiohttp = "3.13.2"
fake-useragent = "2.2.0"
beautifulsoup4 = "4.14.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.23.7"
pytest-mock = "^3.15.1"
pytest-cov = "^6.0.0"
coverage = "^7.10.6"
aioresponses = "^0.7.6"
ruff = "0.7.1"
mypy = "1.11.2"
black = "24.10.0"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["E", "F", "I", "W", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: Integration tests (slower)",
    "unit: Unit tests (fast)",
    "asyncio: Async tests",
]
addopts = [
    "--strict-markers",
    "--verbose",
    "--cov=telegram_fetcher",
    "--cov=text",
    "--cov=rag_module",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["telegram_fetcher", "text", "rag_module"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"