[project]
name = "searchnewsapp"
version = "0.1.0"
description = "RAG-powered semantic search for Azerbaijani news with async Telegram scraping and OpenAI embeddings"
authors = [
    {name = "Rahimov Imran", email = "mr.rahimov.imran@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
name = "searchnewsapp"
version = "0.1.0"
description = "RAG-powered semantic search for Azerbaijani news with async Telegram scraping and OpenAI embeddings"
authors = ["Rahimov Imran <mr.rahimov.imran@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "1.2.1"
numpy = "2.3.4"
chromadb = "1.3.4"
openai = "2.7.1"
langchain = "1.0.5"
langchain-core = "1.0.4"
langchain-community = "0.4.1"
langchain-chroma = "1.0.0"
langchain-openai = "1.0.2"
tiktoken = "0.12.0"
telethon = "1.42.0"
requests = "2.32.5"
aiohttp = "3.13.2"
fake-useragent = "2.2.0"
beautifulsoup4 = "4.14.2"
fastapi = {version = "0.124.4", extras = ["email"]}
uvicorn = {version = "0.34.0", extras = ["standard"]}
pydantic = {version = "2.12.5", extras = ["email"]}
pydantic-settings = "2.12.0"
sqlalchemy = "2.0.36"
psycopg = {version = "3.2.3", extras = ["binary"]}
asyncpg = "0.30.0"
sqladmin = "0.22.0"
python-jose = {version = "3.3.0", extras = ["cryptography"]}
passlib = "1.7.4"
bcrypt = "5.0.0"
alembic = "1.17.2"
itsdangerous = "^2.2.0"
argon2-cffi = "^25.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.23.7"
pytest-mock = "3.15.1"
pytest-cov = "6.0.0"
coverage = "7.10.6"
aioresponses = "0.7.6"
ruff = "0.7.1"
mypy = "1.11.2"
black = "24.10.0"
pre-commit = "3.5.0"
bandit = {version = "1.7.10", extras = ["toml"]}
isort = "5.13.2"
pydocstyle = "6.3.0"
ipython = "9.7.0"
ipykernel = "7.1.0"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "N"]
ignore = ["E501", "F403", "F405"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B104", "B601"]

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: Integration tests (slower)",
    "unit: Unit tests (fast)",
    "asyncio: Async tests",
]
addopts = [
    "--strict-markers",
    "--verbose",
    "--cov=telegram_fetcher",
    "--cov=rag_module",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
files = ["telegram_fetcher", "rag_module"]
exclude = ["tests"]

[tool.coverage.run]
source = ["telegram_fetcher", "rag_module"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
