[tool.poetry]
name = "searchnewsrag-backend"
version = "0.1.0"
description = "FastAPI backend service for SearchNewsRAG"
authors = ["Rahimov Imran <mr.rahimov.imran@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "0.115.6"
uvicorn = {extras = ["standard"], version = "0.34.0"}
pydantic = "2.10.6"
pydantic-settings = "^2.10.1"
python-dotenv = "1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
pytest-asyncio = "0.23.7"
pytest-mock = "^3.15.1"
ruff = "0.7.1"
mypy = "1.11.2"
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
